<resources>
    <string name="app_name">Finance App</string>
    <string name="follow_company">Follow A Company</string>
    <string name="make_call">Make A Call</string>
    <string name="make_put">Make A Put</string>
    <string name="buy_stock">Buy A Stock</string>
    <string name="buy_bond">Buy A Bond</string>
    <string name="learn_more">Learn More</string>
    <string name="information">Information</string>
    <string name="start">Start</string>
    <string name="finish">Finish</string>
    <string name="options_content">A contract to buy or sell an asset, often a stock, at a later date. A European option
        is one in which the exercise date is fixed, while an American option is one in which the exercise date can be any
        time up to the listed exercise date.</string>
</resources>
